src/objects/InvoiceItem__c.object
<CustomObject>
    <description>An Invoice Item is an incentivized product or service charged on an Invoice.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>An identifying description of an Invoice Item. Only used when not identifying an item with a lookup to Product2 or any other Salesforce object.</description>
        <inlineHelpText>Enter an identifying description for the Invoice Item.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Invoice on which an Invoice Item appears.</description>
        <inlineHelpText>This is the Invoice that this Invoice Item is on.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product related to this Invoice Item.</description>
        <inlineHelpText>Enter the name of the Product purchased. This must be a Product in your org.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The quantity of an Invoice Item purchased.</description>
        <inlineHelpText>Enter the quantity purchased of the item.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <description>The total price of an Invoice Item (Quantity x Unit Price)</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>The price per unit of an Invoice Item.</description>
        <inlineHelpText>Enter the price per unit of the item purchased.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>IT-{00000000}</displayFormat>
        <label>Invoice Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateInvoiceNull</fullName>
        <active>true</active>
        <description>This Invoice Item must be associated with an Invoice.</description>
        <errorConditionFormula>ISBLANK( Invoice__c )</errorConditionFormula>
        <errorMessage>This Invoice Item must be associated with an Invoice.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateInvoiceUpdate</fullName>
        <active>true</active>
        <description>You cannot change the Invoice associated with an Invoice Item.</description>
        <errorConditionFormula>AND(
 ISCHANGED( Invoice__c ),
 NOT(ISBLANK(PRIORVALUE(Invoice__c))),
 PRIORVALUE(Invoice__c)!=Invoice__c
)</errorConditionFormula>
        <errorMessage>You cannot change the Invoice associated with an Invoice Item.</errorMessage>
    </validationRules>
</CustomObject>